# TG-Store

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  SECURITY_AUDIT.md  docker-compose.yml  fix_framer.py  fix_landing.py  settings.local.json
Docs/: APP FLOW.md  Ai Instruction.md  PRD.md  TRD.md
backend/: .env.example  pyproject.toml  railpack.json  railway.json  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_fix_file_folder_fk.py  0003_drop_unused_name_index.py  f19e8b80c013_add_user_id.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  firebase.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  db.py  schemas.py
backend/app/routers/: auth.py  files.py  folders.py
backend/app/services/: telegram.py
backend/app/utils/: helpers.py
backend/tests/: test_api.py
frontend/: .env.example  auth.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  template.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/disclaimer/: page.tsx
frontend/app/files/[id]/stream/: route.ts
frontend/app/privacy/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: ApiAuthBridge.tsx  Dashboard.tsx  FileList.tsx  FileRow.tsx  LandingPage.tsx  Modals.tsx  PreviewModal.tsx  Sidebar.tsx  StorageStats.tsx  TopBar.tsx  UploadDropzone.tsx
frontend/lib/: api.ts  firebase.ts  format.ts
frontend/types/: index.ts
